--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,93 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
+
+html,
+body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background: #000;
+}
+
+/* #record {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+#record::before {
+    background: url('/public/vinyl-record.png') no-repeat center center;
+    background-size: cover;
+    content: '';
+    width: 100vw;
+    height: 100vw;
+    position: absolute;
+    animation: spin 1.5s linear infinite; 
+}*/
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+body {
+    text-align: center;
+}
+.record-container {
+    display: inline-block;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.record {
+    position: relative;
+    width: 63vw;
+    height: 63vw;
+    border-radius: 50%;
+    background: linear-gradient(
+                30deg,
+                transparent 40%,
+                rgba(42, 41, 40, 0.85) 40%
+            )
+            no-repeat 100% 0,
+        linear-gradient(60deg, rgba(42, 41, 40, 0.85) 60%, transparent 60%)
+            no-repeat 0 100%,
+        repeating-radial-gradient(
+            #2a2928,
+            #2a2928 4px,
+            #ada9a0 5px,
+            #2a2928 6px
+        );
+    background-size: 50% 100%, 100% 50%, 100% 100%;
+    animation: spin 1.5s linear infinite;
+}
+.record:after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -5.14vw;
+    border: solid 1px #d9a388;
+    width: 10vw;
+    height: 10vw;
+    border-radius: 50%;
+    box-shadow: 0 0 0 7vw #da5b33, inset 0 0 0 4vw #da5b33;
+    background: #b5ac9a;
+    content: '';
+}
